# QA_GURU_Python_19_16

./: .gitignore  pyproject.toml
